Fixed Number Alignment Inside Display

--- a/style.css
+++ b/style.css
@@ -24,12 +24,32 @@ body {
 }
 
 .display {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
     background-color: rgba(159,186,178,255);
     color: whitesmoke;
     width: 390px;
     height: 180px;
     border-radius: 40px;
     box-shadow: 0 5px 5px 0 rgba(0,0,0,0.1), 0 5px 5px 0 rgba(0,0,0,0.1);
+}
+
+.display p {
+    margin-right: 20px;
+    margin-bottom: 20px;
+    font-family: "Oswald", sans-serif;
+}
+
+.result_calc {
+    font-weight: 800;
+    font-size: 30px;
+}
+
+.sub_calc {
+    font-weight: 300;
+    font-size: 22px;
 }
 
 .buttons_container {
@@ -51,6 +71,9 @@ body {
 }
 
 button {
+    font-family: "Oswald", sans-serif;
+    font-weight: 800;
+    font-size: large;
     color: rgb(79, 83, 84);
     background-color: rgba(240,237,230,255);
     width: 80px;
@@ -61,10 +84,4 @@ button {
     border-color: rgba(151, 159, 161, 0.153);
     border-radius: 35px;
     box-shadow: 0 5px 5px 0 rgba(0,0,0,0.1), 0 5px 5px 0 rgba(0,0,0,0.1);
-}
-
-.display, button {
-    font-family: "Oswald", sans-serif;
-    font-weight: 800;
-    font-size: large;
 }
